# ProgAlg

./: .gitignore
Exercise1/: .gitignore  BankAccount.h  CMakeLists.txt  RWLock.h  main.cpp
Exercise2/: CMakeLists.txt  imageprocessing.cpp  main.cpp  summation.cpp
Stopwatch/: Stopwatch.h
